[package]
name = "rat-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
rat-nexus = { path = "../rat-nexus" }
anyhow = "1.0.100"
crossterm = "0.29.0"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4"
rand = "0.8"
rig-core = "0.28.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
